fixing general overflow 2

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -180,6 +180,7 @@ body {
   align-items: center;
   gap: var(--spacing);
   margin: var(--spacing) 0;
+  overflow: hidden;
 }
 
 .project-container {
